{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 11,
  "lineage": "1577a025-b36d-11a2-a5f9-8e2a5014af41",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-006f82a1d5a27da54",
            "arn": "arn:aws:ec2:ap-south-1:524471257424:instance/i-001da340b847114f4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "DevOpsEC2Profile",
            "id": "i-001da340b847114f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04aec9e0704437632"
              }
            ],
            "primary_network_interface_id": "eni-04aec9e0704437632",
            "private_dns": "ip-10-0-1-201.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.201",
            "public_dns": "ec2-13-206-222-211.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.222.211",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c01c8f6e963b1ab5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec6c97ae95aa4d50",
            "tags": {
              "Environment": "Development",
              "Name": "DevOps-Server",
              "Project": "AWS DevSecOps Capstone"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "DevOps-Server",
              "Project": "AWS DevSecOps Capstone"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09b32c219405a67e7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "524471257424",
            "id": "i-001da340b847114f4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.devops_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524471257424:internet-gateway/igw-042739f9b3b07e39b",
            "id": "igw-042739f9b3b07e39b",
            "owner_id": "524471257424",
            "region": "ap-south-1",
            "tags": {
              "Name": "DevOps-IGW"
            },
            "tags_all": {
              "Name": "DevOps-IGW"
            },
            "vpc_id": "vpc-03f803f06697deecb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "524471257424",
            "id": "igw-042739f9b3b07e39b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524471257424:route-table/rtb-06f0492034cf72ee2",
            "id": "rtb-06f0492034cf72ee2",
            "owner_id": "524471257424",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042739f9b3b07e39b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f803f06697deecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "524471257424",
            "id": "rtb-06f0492034cf72ee2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a9e073b33251979",
            "region": "ap-south-1",
            "route_table_id": "rtb-06f0492034cf72ee2",
            "subnet_id": "subnet-0ec6c97ae95aa4d50"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "524471257424",
            "id": "rtbassoc-07a9e073b33251979",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524471257424:security-group/sg-09b32c219405a67e7",
            "description": "Security Group for DevOps Capstone",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b32c219405a67e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "49.207.60.224/32"
                ],
                "description": "Jenkins Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "49.207.60.224/32"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DevOps-SG",
            "name_prefix": "",
            "owner_id": "524471257424",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-SG"
            },
            "tags_all": {
              "Name": "DevOps-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f803f06697deecb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "524471257424",
            "id": "sg-09b32c219405a67e7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524471257424:subnet/subnet-0ec6c97ae95aa4d50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec6c97ae95aa4d50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "524471257424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-03f803f06697deecb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "524471257424",
            "id": "subnet-0ec6c97ae95aa4d50",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524471257424:vpc/vpc-03f803f06697deecb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd3893a60fade2aa",
            "default_route_table_id": "rtb-0cbf6a0d42bbcfc78",
            "default_security_group_id": "sg-05fb4c461990c2721",
            "dhcp_options_id": "dopt-0caefc0f227f57f42",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03f803f06697deecb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cbf6a0d42bbcfc78",
            "owner_id": "524471257424",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Development",
              "Name": "DevOps-VPC",
              "Project": "AWS DevSecOps Capstone"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "DevOps-VPC",
              "Project": "AWS DevSecOps Capstone"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "524471257424",
            "id": "vpc-03f803f06697deecb",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}